# STM_Config

./: .gitignore  CMakeLists.txt  README.md  arm-none-eabi-toolchain.cmake
app/: boot_app.c  boot_app.h  main.c
core/include/: flash_manager.h  ota_protocol.h  uart_drv.h
core/src/: flash_manager.c  ota_protocol.c  uart_drv.c
linker/: STM32F407VGTx_FLASH.ld
test/: send_hello.py
